--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@ body{
 }
 
 #board{
-    width: 80vmin;
-    height: 80vmin;
-    background-color: lightgray;
+    width: 75vmin;
+    height: 75vmin;
+    background-color: rgb(204, 204, 204);
     border: calc(60vmin/50) solid darkgray;
 
     margin: auto;
@@ -25,7 +25,44 @@ body{
 }
 
 .tile-clicked{
-    background-color: darkgray;
+    background-color: rgb(229, 229, 229);
+}
+
+.container{
+    display: flex;
+    flex-wrap: wrap-reverse;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    width: fit-content;
+}
+
+.inps{
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    height: 75vmin;
+}
+
+.row{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    text-align: start;
+    height: 50px;
+    width: auto;
+}
+
+.inps input{
+    height: 20px;
+    margin: 15px;
+    text-align: end;
+}
+
+#start{
+    width: 90px;
+    height: 40px;
+    font-size: large;
+    margin: 15px auto;
 }
 
 .x1{
